# cargo-raze-vendor

./: Cargo.toml  README.md  WORKSPACE  default.nix
cargo/: WORKSPACE
cargo/advapi32-sys-0.2.0/: BUILD
cargo/aho-corasick-0.5.3/: BUILD
cargo/bitflags-0.7.0/: BUILD
cargo/cfg-if-0.1.0/: BUILD
cargo/cmake-0.1.21/: BUILD
cargo/crossbeam-0.2.10/: BUILD
cargo/curl-0.4.6/: BUILD
cargo/curl-sys-0.3.10/: BUILD
cargo/docopt-0.6.86/: BUILD
cargo/env_logger-0.3.5/: BUILD
cargo/filetime-0.1.10/: BUILD
cargo/flate2-0.2.17/: BUILD
cargo/foreign-types-0.2.0/: BUILD
cargo/fs2-0.3.0/: BUILD
cargo/gcc-0.3.43/: BUILD
cargo/gdi32-sys-0.2.0/: BUILD
cargo/git2-0.6.4/: BUILD
cargo/git2-curl-0.7.0/: BUILD
cargo/glob-0.2.11/: BUILD
cargo/idna-0.1.0/: BUILD
cargo/kernel32-sys-0.2.2/: BUILD
cargo/lazy_static-0.2.4/: BUILD
cargo/libc-0.2.21/: BUILD
cargo/libgit2-sys-0.6.7/: BUILD
cargo/libssh2-sys-0.2.5/: BUILD
cargo/libz-sys-1.0.13/: BUILD
cargo/log-0.3.7/: BUILD
cargo/matches-0.1.4/: BUILD
cargo/memchr-0.1.11/: BUILD
cargo/miniz-sys-0.1.9/: BUILD
cargo/miow-0.1.5/: BUILD
cargo/net2-0.2.27/: BUILD
cargo/num_cpus-1.3.0/: BUILD
cargo/openssl-0.9.7/: BUILD
cargo/openssl-probe-0.1.0/: BUILD
cargo/openssl-sys-0.9.7/: BUILD
cargo/pkg-config-0.3.9/: BUILD
cargo/psapi-sys-0.1.0/: BUILD
cargo/rand-0.3.15/: BUILD
cargo/regex-0.1.80/: BUILD
cargo/regex-syntax-0.3.9/: BUILD
cargo/rustc-serialize-0.3.22/: BUILD
cargo/semver-0.5.1/: BUILD
cargo/semver-parser-0.6.2/: BUILD
src/: common.rs  main.rs  vendor.rs  workspace.rs
(+25 files in other folders)
