[package]
name = "cargo-proto-raze"
version = "0.1.1"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/acmcarther/cargo-raze-vendor"
description = """
A Cargo subcommand to help integrate Cargo dependencies into a Bazel project.
"""

[dependencies]
rustc-serialize = "0.3"
nom = "2.2.0"
cargo = "0.17.0"

[dependencies.libc]
version = "0.2.21"
default-features = false
